# doc/api.yaml
@@ -48,6 +48,14 @@ components:
         # identifier of the comment/like in a post, given that we cann have many of the same user
         comment_id:
           $ref: "#/components/schemas/ID"
+        
+        username:
+          type: string
+          description: "name of the user profile"
+          pattern: '^.*?$' 
+          example: "Daniel Guarnizo"
+          minLength: 3 
+          maxLength: 16   
 
         # id of the user who does the comment/like, this will help us identify from whom the comment/like is
         user_id: 
@@ -71,26 +79,18 @@ components:
         post_id:
           $ref: "#/components/schemas/ID"
         
-        like_id:
-          $ref: "#/components/schemas/ID"
+        liker:
+          type: string
+          description: "name of the user whose mak ethe like in the post "
+          pattern: '^.*?$' 
+          example: "Daniel Guarnizo"
+          minLength: 3 
+          maxLength: 16   
         # id of the user who does the comment/like, this will help us identify from whom the comment/like is
         user_id: 
           $ref: "#/components/schemas/ID"
 
-    # Image:
-    #   title: image of a post 
-    #   description: |-
-    #     An images regargly an user, such image will be the main component of an user post 
-    #   type: object 
-    #   properties:
-    #     image:
-    #       type: string
-    #       description: "Binary representation of a image"
-    #       format: base64
-    #       pattern: '^[a-zA-Z0-9+/]*={0,2}$'
-    #       minLength: 1  
-    #       maxLength: 1048576
-          
+
     Post:
       title: Post of an user on his profile 
       description: |- 
@@ -299,14 +299,12 @@ paths:
           description: Bad request. Invalid user data.
         '500':
           description: Internal server error.
-                    
+ 
   
   # LIKE PHOTO
   # here we want to add a like to a post 
-  
-  
-  /likes/:
-    post:
+  /users/{userid}/posts/{postid}/likes:
+    put:
       security:
         - bearerAuth: []
       tags:
@@ -315,33 +313,70 @@ paths:
       summary: Add a like to a post
       description: |- 
         an user is trying to add a like to a post of another user 
-      
-          
-      requestBody:
-        content:
-          application/json:
-            schema: { $ref: "#/components/schemas/Like"}
+      parameters:
+        - name: userid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true 
+        - name: postid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true 
       responses: 
-        "201":
-          # in this case by created we mean that we add a like to the array of likes of a post 
-          description: Like successfully created 
-          # we need a response body given that we are creating a new resources
-          content:
-            application/json:
-              schema: { $ref: "#/components/schemas/Like"} 
-              # means that the responses of the request is in a json format and indicates how it's organizes, what it has ecc...
-              
+        '204':
+          description: li added  successfully.
         '400':
           description: Bad request. Invalid user data.
-            
         '401':
           $ref: '#/components/responses/UnauthorizedError'
+        '500':
+          description: Internal server error.
+    get:
+      security:
+      - bearerAuth: []
+      tags:
+        - Users
+        - Profiles
+      operationId: getLikes
+      summary: get the likes of a post
+      description: |-
+        and user get the likes of a post 
+      parameters:
+        - name: userid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
+
+        - name: postid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
+          
+      responses:
+        # we use 200 instead of 201 because we are not creating a resource and we are just safistying a request
+        "200":
+          description: |-
+            The list of likers of the post.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserList"
+
+        '400':
+            description: Bad request. Invalid user data.
+        '401':
+            $ref: '#/components/responses/UnauthorizedError'
+        '404':
+          description: No user profiles found for the provided username.
         '500':
           description: Internal server error.
   
   # UNLIKE PHOTO
   # here we want to remove a like that we previously added to a post 
-  /likes/{likeid}:
     delete: 
       security:
         - bearerAuth: []
@@ -352,15 +387,20 @@ paths:
       description: |- 
         an user want to remove e like that previously add to a post of another user 
       parameters:
-        - name: likeid
+        - name: userid
           in: path
           schema:
             $ref: "#/components/schemas/ID"
-          required: true 
+          required: true
+
+        - name: postid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
         
       responses:
         # use status code 204 instead of 200, because with 200 there is response body with additional information which can be misleading in the context of a DELETE operation. with 204 indicates that the deletion operation was successful
-        
         "204":
           description: |-
             specify if the like of an user post was correctly deletated 
@@ -374,11 +414,12 @@ paths:
           
         "500":
           description: Internal server error 
-  
+
+   
   # COMMENT PHOTO        
   #here we want to add a comment to a post (it could be to the self post or to post of another user)
-  /comments/:
-    post:
+  /comments:
+    put:
       security: 
         - bearerAuth: []
       tags:
@@ -392,13 +433,10 @@ paths:
         content:
           application/json:
             schema: { $ref: "#/components/schemas/Comment"}
+
       responses:
-        "201":
+        "204":
           description: Comment successfully created 
-          # we need a response body given that we are creating a new resources
-          content:
-            application/json:
-              schema: { $ref: "#/components/schemas/Comment"}
               
         '400':
           description: Bad request. Invalid user data.
@@ -408,10 +446,9 @@ paths:
         
         '500':
           description: Internal server error.
-  
+          
+  /users/{userid}/posts/{postid}/comments:
   # UNCOMMENT PHOTO
-  # here we want to remove a comment but with a simple constraint that only the "owner" of the comment can delete it's own comment  
-  /comments/{commentid}:
     delete:
       security: 
         - bearerAuth: []
@@ -420,13 +457,19 @@ paths:
       operationId: uncommentPhoto
       summary: Remove a comment from a post
       description: |-
-        An user want to remove a comment done in a post 
+        here we want to remove a comment but with a simple constraint that only the "owner" of the comment can delete it's own comment   
       parameters:
-        - name: commentid
+        - name: userid
           in: path
           schema:
             $ref: "#/components/schemas/ID"
-          required: true 
+          required: true
+
+        - name: postid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
           
       responses:
         "204":
@@ -443,7 +486,49 @@ paths:
           
         "500":
           description: Internal server error 
+
+    get:
+      security:
+      - bearerAuth: []
+      tags:
+        - Users
+        - Profiles
+      operationId: getComments
+      summary: get the comments of a post
+      description: |-
+        and user get the comments of a post 
+      parameters:
+        - name: userid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
+
+        - name: postid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
           
+      responses:
+        # we use 200 instead of 201 because we are not creating a resource and we are just safistying a request
+        "200":
+          description: |-
+            The list of commenters of the post.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserList"
+
+        '400':
+            description: Bad request. Invalid user data.
+        '401':
+            $ref: '#/components/responses/UnauthorizedError'
+        '404':
+          description: No user profiles found for the provided username.
+        '500':
+          description: Internal server error.
+  
   # SET MY USER NAME
   # an user want to change it's username
   /users/{userid}:
@@ -579,10 +664,11 @@ paths:
         "500":
           description: Internal server error 
           
-  # FOLLOW USER        
-  # user want to  follow an user 
-  /users/{userid}/following:
-    post:
+  
+  # FOLLOW OPERATIONS
+  /users/{userid}/follows/{username}:
+    # FOLLOW AN USER
+    put:
       security:
         - bearerAuth: []
       tags:
@@ -599,44 +685,21 @@ paths:
           schema:
             $ref: "#/components/schemas/ID" 
           required: true 
-      
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              description: "ID of the user that we want to follow, so ID of the user to be followed"
-              properties:
-                followedID:
-                  # ID of the user that we want to follow, so ID of the user to be followed.
-                  $ref: "#/components/schemas/ID"
-                followingUsername:
-                  type: string
-                  pattern: '^.*?$'
-                  description: Username of the user to be followed.
-                  example: 'el_jefe'
-                  minLength: 3 
-                  maxLength: 16 
+        - name: username
+          in: path
+          description: username to search for 
+          required: true
+          schema:
+            type: string
+            description: "username of the banished user"
+            example: "Daniel"
+            pattern: "^.*?$"
+            minLength: 3 
+            maxLength: 16
       
       responses:
-        "201":
-          description: user followed successfully 
-          content:
-            application/json:
-              schema:
-                type: object
-                description: "ID of the user that we want to follow, so ID of the user to be followed."
-                properties:
-                
-                  followedID:
-                    # ID of the user that we want to follow, so ID of the user to be followed.
-                    $ref: "#/components/schemas/ID"
-               
-                  followingUsername:
-                    type: string
-                    pattern: "ˆ.*?$"
-                    description: Username of the user to be followed.
-                    example: 'el_jefe'
+        "204":
+          description: "User follow Succesfully"
         '400':
             description: Bad request. Invalid user data.
             
@@ -648,10 +711,8 @@ paths:
         
         "500":
           description: Internal server error 
-        
-  # UNFOLLOW USER
-  # user want ot unfollow and user that start follow early
-  /users/{userid}/following/{followedid}:
+
+    # UNFOLLWO AN USER
     delete:
       security: 
         - bearerAuth: []
@@ -668,11 +729,17 @@ paths:
             $ref: "#/components/schemas/ID"
           required: true
         
-        - name: followedid
+        - name: username
           in: path
-          schema:
-            $ref: "#/components/schemas/ID"
+          description: username to search for 
           required: true
+          schema:
+            type: string
+            description: "username of the banished user"
+            example: "Daniel"
+            pattern: "^.*?$"
+            minLength: 3 
+            maxLength: 16
           
       responses:
         "204":
@@ -689,12 +756,80 @@ paths:
           
         "500":
           description: Internal server error 
+    
+  # GET FOLLOWING OF AN USER
+  /users/{userid}/following:
+    get:  
+      security: 
+        - bearerAuth: []
+      tags:
+        - Users
+      operationId: getFollowing
+      summary: users followig 
+      description: |-
+        get the list of user an user by userid is following 
+      parameters:
+        - name: userid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
+
+      responses:
+        "200":
+          description: |-
+            The list of following users.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserList"
+        '401':
+            $ref: '#/components/responses/UnauthorizedError'
+        "404":
+          description: Resource not found
           
-  # BAND USER
+        "500":
+          description: Internal server error 
+  
+  # GET FOLLOWERS OF AN USER 
+  /users/{userid}/followers:
+    get:  
+      security: 
+        - bearerAuth: []
+      tags:
+        - Users
+      operationId: getFollowers
+      summary: users followers
+      description: |-
+        get the list of user that follow an user with userid
+      parameters:
+        - name: userid
+          in: path
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
+
+      responses:
+        "200":
+          description: |-
+            The list of followers
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserList"
+        '401':
+            $ref: '#/components/responses/UnauthorizedError'
+        "404":
+          description: Resource not found
+          
+        "500":
+          description: Internal server error 
+        
+  # BAND OPERATIONS, BAN, UNBAN AND GET BANS 
   # here we create a collection of muted user for a particular userid    
   /users/{userid}/bans/{username}:    
   # /users/{userid}/bans/{username}:
-    post:
+    put:
       security: 
         - bearerAuth: []
       tags:
