# service/api/api-comment.go
@@ -1,12 +1,13 @@
 package api
 
 import (
+	"WASAPhoto/service/api/reqcontext"
 	"database/sql"
 	"encoding/json"
 	"errors"
-	"github.com/julienschmidt/httprouter"
 	"net/http"
-	"WASAPhoto/service/api/reqcontext"
+
+	"github.com/julienschmidt/httprouter"
 )
 
 // var Comments = []Comment{
@@ -39,24 +40,25 @@ func (rt *_router) commentPhoto(w http.ResponseWriter, r *http.Request, ps httpr
 
 	// defer closing the request body
 	defer r.Body.Close()
-	userid := comment.User_ID
+
 	// Authentication
-	authorized := Authentication(w, r, userid)
-	if authorized == false {
-		return
-	}
+	// authorized := Authentication(w, r, userid)
+	// if authorized == false {
+	// 	return
+	// }
 
 	// Generated a new unique ID for the comment
 	commentid := generateUniqueID()
 	newComment := Comment{
 		Post_ID:    comment.Post_ID,
 		Comment_ID: commentid,
+		Commenter:  comment.Commenter,
 		User_ID:    comment.User_ID,
 		Body:       comment.Body,
 	}
 
 	// Save the new comment in the database
-	err = rt.db.SetComment(newComment.CommentToDataBase())
+	err = rt.db.SetComment(newComment.Post_ID, newComment.Comment_ID, newComment.Commenter, newComment.User_ID, newComment.Body)
 	if err != nil {
 		rt.baseLogger.WithError(err).Warning("Error saving comment into database")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -64,25 +66,7 @@ func (rt *_router) commentPhoto(w http.ResponseWriter, r *http.Request, ps httpr
 		return
 	}
 
-	// Encode the newComment to a variable before writing it to the response writer
-	response, err := json.Marshal(newComment)
-	if err != nil {
-		rt.baseLogger.WithError(err).Warning("Comment returned an error in encoding")
-		w.WriteHeader(http.StatusInternalServerError)
-		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
-		return
-	}
-
-	// Write the encoded response to the response writer
-	w.WriteHeader(http.StatusCreated)
-	_, err = w.Write(response)
-	if err != nil {
-		rt.baseLogger.WithError(err).Warning("Comment returned an error in writing response")
-		w.WriteHeader(http.StatusInternalServerError)
-		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
-		return
-	}
-
+	w.WriteHeader(http.StatusNoContent)
 }
 
 func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
@@ -95,25 +79,24 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps htt
 		return
 	}
 
-	dbcomment, err := rt.db.GetComment(commentid)
-	if err != nil {
-		rt.baseLogger.WithError(err).Warning("comment not found in the database")
-		w.WriteHeader(http.StatusNotFound)
-		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "comment not found in the database"})
+	userid := ps.ByName("userid")
+	postid := ps.ByName("postid")
+	// to handle the error if the request wa made in a wrong way
+	if postid == "" || userid == "" {
+		// Handle the case when "likeid" is not present in the request.
+		rt.baseLogger.Warning("the likeid in the path is empty")
+		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
-	var c Comment
-	c.CommentFromDataBase(dbcomment)
-	userid := c.User_ID
 
 	// Authentication
-	authorized := Authentication(w, r, userid)
-	if authorized == false {
-		return
-	}
+	// authorized := Authentication(w, r, userid)
+	// if authorized == false {
+	// 	return
+	// }
 
 	// Remove from the database the comment given the commentid
-	err = rt.db.RemoveComment(commentid)
+	err := rt.db.RemoveComment(commentid)
 	if err != nil {
 		// check it the err is od the same type of sql.ErrNoRows
 		if errors.Is(err, sql.ErrNoRows) {
@@ -132,4 +115,49 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps htt
 	}
 
 	w.WriteHeader(http.StatusNoContent)
+}
+
+func (rt *_router) getComments(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	w.Header().Set("Content-Type", "application/json")
+
+	// Get from the path the needed data
+	userid := ps.ByName("userid")
+	postid := ps.ByName("postid")
+	if postid == "" || userid == "" {
+		// Handle the case when "likeid" is not present in the request.
+		rt.baseLogger.Warning("the postid ot the userid in the path is empty")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Get the list of likes of a post from the database
+	dbComments, err := rt.db.GetComments(postid)
+	if err != nil {
+		rt.baseLogger.WithError(err).Warning("Error getting likes from database")
+		w.WriteHeader(http.StatusInternalServerError)
+		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
+		return
+	}
+
+	CommentsList := GetCommentsFromDatabase(dbComments)
+
+	// Encode the CommentList in to a variable before writing it to the response writer
+	response, err := json.Marshal(CommentsList)
+	if err != nil {
+		rt.baseLogger.WithError(err).Warning("Error encoding comment list for response")
+		w.WriteHeader(http.StatusInternalServerError)
+		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
+		return
+	}
+
+	// Write the encoded response to the response writer
+	w.WriteHeader(http.StatusCreated)
+	_, err = w.Write(response)
+	if err != nil {
+		rt.baseLogger.WithError(err).Warning("Error writing response")
+		w.WriteHeader(http.StatusInternalServerError)
+		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
+		return
+	}
+
 }
