# service/api/api-like.go
@@ -2,12 +2,13 @@ package api
 
 import (
 	"encoding/json"
-	"github.com/julienschmidt/httprouter"
 	"net/http"
 
+	"github.com/julienschmidt/httprouter"
+
+	"WASAPhoto/service/api/reqcontext"
 	"database/sql"
 	"errors"
-	"WASAPhoto/service/api/reqcontext"
 )
 
 type JSONErrorMsg struct {
@@ -21,39 +22,29 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 	// Specify the content-type the server will return to the client
 	w.Header().Set("Content-Type", "application/json")
 
-	// Create a variable of type Like to parse the data passed in the request body
-	var l Like
-
-	// Read and parse the JSON data from the request body into a Like object.
-	// The .Decode method parses the data into the object's memory address &l.
-	err := json.NewDecoder(r.Body).Decode(&l)
-	if err != nil {
-		// Handle error (e.g., invalid JSON format)
-		rt.baseLogger.WithError(err).Warning("invalid JSON format")
+	userid := ps.ByName("userid")
+	postid := ps.ByName("postid")
+	// to handle the error if the request wa made in a wrong way
+	if postid == "" || userid == "" {
+		// Handle the case when "likeid" is not present in the request.
+		rt.baseLogger.Warning("the likeid in the path is empty")
 		w.WriteHeader(http.StatusBadRequest)
-		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "bad request body"})
 		return
 	}
 
-	// defer closing the request body
-	defer r.Body.Close()
-	userid := l.User_ID
+	// get the name of the user by userid
+	liker, err := rt.db.GetName(userid)
+	if err != nil {
+		return
+	}
 	// Authentication
-	authorized := Authentication(w, r, userid)
-	if authorized == false {
-		return
-	}
-
-	// Generate a new unique ID for the like
-	likeid := generateUniqueID()
-	newlike := Like{
-		Post_ID: l.Post_ID,
-		Like_ID: likeid,
-		User_ID: l.User_ID,
-	}
+	// authorized := Authentication(w, r, userid)
+	// if authorized == false {
+	// 	return
+	// }
 
 	// Save the new like to the database
-	err = rt.db.SetLike(newlike.LikeToDataBase())
+	err = rt.db.SetLike(postid, liker, userid)
 	if err != nil {
 		rt.baseLogger.WithError(err).Warning("Error saving like into database")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -61,58 +52,31 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 		return
 	}
 
-	// Encode the newLike to a variable before writing it to the response writer
-	response, err := json.Marshal(newlike)
-	if err != nil {
-		rt.baseLogger.WithError(err).Warning("Error encoding like for response")
-		w.WriteHeader(http.StatusInternalServerError)
-		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
-		return
-	}
-
-	// Write the encoded response to the response writer
-	w.WriteHeader(http.StatusCreated)
-	_, err = w.Write(response)
-	if err != nil {
-		rt.baseLogger.WithError(err).Warning("Error writing response")
-		w.WriteHeader(http.StatusInternalServerError)
-		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
-		return
-	}
+	// Respond with a 204 status code (success, no content)
+	w.WriteHeader(http.StatusNoContent)
 }
 
 func (rt *_router) unlikePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	w.Header().Set("Content-Type", "application/json")
 
-	likeid := ps.ByName("likeid")
-
+	userid := ps.ByName("userid")
+	postid := ps.ByName("postid")
 	// to handle the error if the request wa made in a wrong way
-	if likeid == "" {
+	if postid == "" || userid == "" {
 		// Handle the case when "likeid" is not present in the request.
 		rt.baseLogger.Warning("the likeid in the path is empty")
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
 
-	dblike, err := rt.db.GetLike(likeid)
-	if err != nil {
-		rt.baseLogger.WithError(err).Warning("like not found in the database")
-		w.WriteHeader(http.StatusNotFound)
-		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "comment not found in the database"})
-		return
-	}
-	var l Like
-	l.LikeFromDataBase(dblike)
-	userid := l.User_ID
-
 	// Authentication
-	authorized := Authentication(w, r, userid)
-	if authorized == false {
-		return
-	}
+	// authorized := Authentication(w, r, userid)
+	// if authorized == false {
+	// 	return
+	// }
 
 	// Remove from the database the like given the likeid
-	err = rt.db.RemoveLike(likeid)
+	err := rt.db.RemoveLike(userid, postid)
 	if err != nil {
 		// check it the err is of the same type of sql.ErrNoRows
 		if errors.Is(err, sql.ErrNoRows) {
@@ -131,5 +95,48 @@ func (rt *_router) unlikePhoto(w http.ResponseWriter, r *http.Request, ps httpro
 	}
 
 	w.WriteHeader(http.StatusNoContent)
+
+}
+
+func (rt *_router) getLikers(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	w.Header().Set("Content-Type", "application/json")
+
+	userid := ps.ByName("userid")
+	postid := ps.ByName("postid")
+
+	if postid == "" || userid == "" {
+		// Handle the case when "likeid" is not present in the request.
+		rt.baseLogger.Warning("the likeid in the path is empty")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Get the list of likers of a post from the database
+	UserList, err := rt.db.GetLikers(postid)
+	if err != nil {
+		rt.baseLogger.WithError(err).Warning("Error retreaving likers list of a post")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	// Encode the list of likers  in to a variable before writing it to the response writer
+	response, err := json.Marshal(UserList)
+	if err != nil {
+		rt.baseLogger.WithError(err).Warning("Error encoding UserList for response")
+		w.WriteHeader(http.StatusInternalServerError)
+		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
+		return
+	}
+
+	// Write the encoded response to the response writer
+	w.WriteHeader(http.StatusOK)
+	// rt.baseLogger.Warning(UserList)
+	_, err = w.Write(response)
+	if err != nil {
+		rt.baseLogger.WithError(err).Warning("Error writing response")
+		w.WriteHeader(http.StatusInternalServerError)
+		_ = json.NewEncoder(w).Encode(JSONErrorMsg{Message: "Internal server error"})
+		return
+	}
 
 }
